@@ -104,7 +104,7 @@ exist.
 =item B<-i, --init>
 
 Clean initialization. Delete all previous commands from user's
-c<bin/> directory before creating suymlinks to the allowed
+c<bin/> directory before creating symlinks to the allowed
 commands.
 
 =item B<-o, --chown USER:GROUP>
