@@ -110,7 +110,7 @@ exist.</p>
 
 <dd>
 <p>Clean initialization. Delete all previous commands from user's
-c&lt;bin/&gt; directory before creating suymlinks to the allowed
+c&lt;bin/&gt; directory before creating symlinks to the allowed
 commands.</p>
 </dd>
 <dt><strong><a name="o_chown_user_group" class="item"><strong>-o, --chown USER:GROUP</strong></a></strong></dt>
